# jobengine

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: full_run.yaml  mypy.yml  test.yml
package/: TODO  setup.py
package/examples/: example.py  server.py  test_trajectory.py  topol2.tpr
package/jobengine/: clusters.py  configuration.py  core.py
package/jobengine/clusters/: __init__.py  archer.py  arcus.py  arcusb.py  base.py  biowulf.py  biowulf2.py  biowulf2ib.py  chronos.py  emerald.py  hal.py  jade.py  pbscluster.py  skynet.py  slurmcluster.py  trash.py
package/jobengine/debug/: debug_arcus.py  debug_biowulf.py  debug_work.py
package/jobengine/scripts/: cherrypy_test.py  qcancel.py  qcleanup.py  qdelete.py  qfetch.py  qinfo.py  qpush.py  qserver.py  qstat.py  qstatus.py  qsubmit.py
package/jobengine/scripts/qstat/: qstat.py  qstat.xml
package/jobengine/scripts/test/: qrun.py  test_proxy_command.py  topol.tpr
package/jobengine/test/: test_clusters.py
src/jobengine/: configuration.py  job.py  status.py
src/jobengine/clusters/: cluster_registry.py
src/jobengine/clusters/abstract_clusters/: base_cluster.py  pbs_cluster.py  slurm_cluster.py
src/jobengine/clusters/concrete_clusters/: archer.py  arcus.py  arcusb.py  biowulf.py  biowulf2.py  localhost.py
src/jobengine/controller/: create.py  get.py
src/jobengine/examples/: check_on_jobs.py  connect_to_biowulf2_cluster.py  connect_to_jade_cluster.py
src/jobengine/scripts/: qcancel.py  qcleanup.py  qdelete.py  qfetch.py  qinfo.py  qpush.py  qserver.py  qsubmit.py
tests/: test_get_status_all.py  test_rsync.py
tests/integration/: helpers.py  test_configuration.py
tests/integration/clusters/: test_cluster_registry.py
tests/integration/clusters/concrete_clusters/: test_localhost.py
tests/integration/data/dummy/: dummy.txt
tests/unit/jobengine/: test_configuration.py  test_job.py
(+3 files in other folders)
