[project]
name = "jobengine"
version = "1.0.0"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

dependencies = [
    "paramiko",
    "scp",
    "sqlalchemy",
]

[project.optional-dependencies]
tests = [
    "black",
    "isort",
    "mypy",
    "pytest-cov",
    "pytest",
    "flake8",
    "flake8-simplify",
    "flake8-comprehensions",
    "flake8-bugbear",
    "darglint",
    "flake8-pep585",
    "Flake8-pyproject",
    "types-paramiko",
]

[tool.isort]
profile = "black"

[tool.flake8]
ignore = [
    "E203",
    "E402",
    "E501",
    "W503",
    "W504",
]

[[tool.mypy.overrides]]
module = "scp"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=jobengine"

[project.scripts]
qcancel = "jobengine.scripts.qcancel:main"
qcleanup = "jobengine.scripts.qcleanup:main"
qdelete = "jobengine.scripts.qdelete:main"
qfetch = "jobengine.scripts.qfetch:main"
qinfo = "jobengine.scripts.qinfo:main"
qpush = "jobengine.scripts.qpush:main"
qserver = "jobengine.scripts.qserver:main"
qsubmit = "jobengine.scripts.qsubmit:main"
